@@ -1,3 +1,11 @@
+Tue May 18 15:25:45 1999  Yukihiro Matsumoto  <matz@netlab.co.jp>
+
+	* regex.c (re_search): a bug in range adjustment.
+
+Tue May 18 11:35:59 1999  WATANABE Hirofumi  <watanabe@ase.ptg.sony.co.jp>
+
+	* dln.c (conv_to_posix_path): path_len argument added.
+
 Mon May 17 12:26:31 1999  Yukihiro Matsumoto  <matz@netlab.co.jp>
 
 	* numeric.c (fix_rev): should treat Fixnum as signed long.
@@ -287,7 +295,7 @@ Fri Apr 16 15:09:20 1999  Yukihiro Matsumoto  <matz@netlab.co.jp>
 
 	* config.guess: avoid 'linux-gnu' for alpha-unknown-linux.
 
-	Thu Apr 15 23:46:20 1999  WATANABE Hirofumi  <watanabe@ase.ptg.sony.co.jp>
+Thu Apr 15 23:46:20 1999  WATANABE Hirofumi  <watanabe@ase.ptg.sony.co.jp>
 
 	* ruby.c (rubylib_mangle): mangle path by RUBYLIB_PREFIX.
 
